SpringBoot-K8s-Ingress/.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-ingress
  template:
    metadata:
      labels:
        app: spring-ingress
    spec:
      containers:
        - name: spring-ingress
          image: tirmizee/demo-spring-ingress
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-ingress-service
spec:
  selector:
    app: spring-ingress
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-ingress-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-ingress-2
  template:
    metadata:
      labels:
        app: spring-ingress-2
    spec:
      containers:
        - name: spring-ingress-2
          image: tirmizee/demo-spring-ingress
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-ingress-service-2
spec:
  selector:
    app: spring-ingress-2
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /service-1(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-ingress-service
                port:
                  number: 80
          - path: /service-2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: spring-ingress-service-2
                port:
                  number: 80
